fixed shifting of Portfolio by adding condition on CSS to ignore width of scroll bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,14 @@
+html {
+  overflow-y: scroll;
+}
+
 .bg-light{
   background-color: #ffffff !important;
 }
 
 
 .nav-wrapper {
-  background-color: #fff;
+  background-color: #ffffff;
   margin: 0 auto;
  width: 100%;  
 }
@@ -42,8 +46,6 @@
     border-color: transparent;
   }
   
-
-
   .navbar-collapse {
    justify-content: flex-end; 
 
@@ -56,7 +58,7 @@
   }
 
 .container {
-  background-color: #fff;
+  background-color: #ffffff;
   margin-top: 20px;
   max-width: 960px;
   padding: 30px;
@@ -83,7 +85,7 @@ h1{
   flex-shrink: 0;
 }
   
-    footer{
+footer{
       position: fixed;
         left: 0;
         bottom: 0;
@@ -111,13 +113,6 @@ h3{
     top: 0;
     left: 20;  
     margin-top: 190px;
-}
-
-.work{
-   
-    position: relative; 
-    display: inline-block;
-        margin: 30px;    
 }
 
 .portfolio{
